--- a/Fixit8Brenna.project
+++ b/Fixit8Brenna.project
@@ -59,8 +59,8 @@
           "!type": "External",
           "file": [
             "forms",
-            "Form1",
-            "Form1.json"
+            "twoControls",
+            "twoControls.json"
           ]
         }
       ],
@@ -85,7 +85,7 @@
       "exetitle": "",
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "login",
+      "firstform": "twoControls",
       "fontFamily": "system",
       "height": "",
       "homescreenTitle": "",
